scheduling auto notifications adding token and authorization & moving to the frontend part